# eigen-factors-iros2019

./: CMakeLists.txt  README.md  planeVisualizer.cpp  syntheticOptimizationEval_eigen_vs_icps.cpp  syntheticOptimizationEval_initial_error.cpp  syntheticOptimizationEval_nag_vs_gd.cpp  syntheticOptimizationEval_params.cpp
mrob/src/: CMakeLists.txt  README.md
mrob/src/PCRegistration/: CMakeLists.txt  arun.cpp  gicp.cpp  plane_registration.cpp
mrob/src/PCRegistration/mrob/: pc_registration.hpp
mrob/src/SE3/: CMakeLists.txt  SE3.cpp  SO3.cpp
mrob/src/SE3/mrob/: SE3.hpp  SO3.hpp
